# poof_arm

./: .gitignore  BallAndSocketArm.cpp  CMakeLists.txt  Motor Housing.md  README.md  ThreeJS ball and socket.js  ball and socket.blend
CAD/: Motor Housing Assembly.SLDASM  Motor Housing Base.SLDPRT  Motor Housing.SLDPRT
CAD/Gimble/: Ball.sldprt  Base for outer box.sldprt  Outer Box.sldprt  Slit 1.sldprt
CAD/STL Files/: Motor Housing - 3D Printing +0.4mm tolerance.STL  Motor Housing Base - 3D Printing +0.4mm tolerance - Motor Housing Base.STL  Motor Housing.STL
models/arm/solidworks/: README.md  drum housing.sldprt  joint coupling base.sldprt  joint coupling.sldprt  v-pulley holder.sldprt  wire guide at base.sldprt  wire guide.sldprt
poc/: README.md
poc/Blender/: ball and socket.blend1
poc/BulletDemo/: CMakeLists.txt  README.md
poc/BulletDemo/src/: BulletDemo.cpp
poc/Motor Housing/: Motor Housing Base.SLDASM  Motor Housing.SLDPRT
poc/Motor Housing/Gimble/: Gimble 2.SLDASM  Gimble.SLDASM  Socket.sldprt
poc/Motor Housing/STL Files/: Motor Housing Base Assembly - 3D Printing +0.4mm tolerance.STL
simulations/: CMakeLists.txt  README.md
simulations/BaseCinderApp/: CMakeLists.txt  README.md
simulations/BaseCinderApp/examples/: CMakeLists.txt
simulations/BaseCinderApp/examples/ObjectPicker/: CMakeLists.txt  ObjectPicker.cpp  ObjectPicker.h  README.md
simulations/BaseCinderApp/examples/Simple/: CMakeLists.txt  Simple.cpp  Simple.h
simulations/BaseCinderApp/src/: BaseCinderApp.cpp  BaseCinderApp.h  ExampleCinderApp.cpp  README.md
simulations/BulletDemo/: BulletDemo.cpp  CMakeLists.txt
simulations/BulletDemo/src/: BulletDemo.cpp
simulations/PhysxCinder/: CMakeLists.txt  PhysxBase.h  PhysxCinder.cpp  PhysxCinder.h  README.md  Sidebar.cpp
