MESSAGE("Building BulletDemo")  

find_package(GLUT REQUIRED)
IF (GLUT_FOUND)
	MESSAGE("GLUT FOUND")
	MESSAGE(${GLUT_LIBRARIES})
ELSE (GLUT_FOUND)
	MESSAGE("OPENGL NOT FOUND")
ENDIF (GLUT_FOUND)

FIND_PACKAGE(OpenGL)
IF (OPENGL_FOUND)
	MESSAGE("OPENGL FOUND")
	MESSAGE(${OPENGL_LIBRARIES})
ELSE (OPENGL_FOUND)
	MESSAGE("OPENGL NOT FOUND")
	SET(OPENGL_gl_LIBRARY opengl32)
	SET(OPENGL_glu_LIBRARY glu32)
ENDIF (OPENGL_FOUND)

INCLUDE_DIRECTORIES(
$ENV{BULLET_PHYSICS_SOURCE_DIR}/src
)

link_directories(
$ENV{BULLET_PHYSICS_SOURCE_DIR}/build/lib/Release/
)

LINK_LIBRARIES(
 BulletDynamics BulletCollision LinearMath
)

IF (WIN32)
	ADD_EXECUTABLE(BulletDemo
		BulletDemo.cpp
		$ENV{BULLET_PHYSICS_SOURCE_DIR}/build3/bullet.rc
	)
ELSE()
	ADD_EXECUTABLE(BulletDemo
		BulletDemo.cpp
	)
ENDIF()
target_link_libraries(BulletDemo PRIVATE GLUT::GLUT)


IF (INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)
			SET_TARGET_PROPERTIES(BulletDemo PROPERTIES  DEBUG_POSTFIX "_Debug")
			SET_TARGET_PROPERTIES(BulletDemo PROPERTIES  MINSIZEREL_POSTFIX "_MinsizeRel")
			SET_TARGET_PROPERTIES(BulletDemo PROPERTIES  RELWITHDEBINFO_POSTFIX "_RelWithDebugInfo")
ENDIF(INTERNAL_ADD_POSTFIX_EXECUTABLE_NAMES)


MESSAGE("Done building BulletDemo")  